[gd_scene load_steps=9 format=3 uid="uid://b6higui737uwq"]

[ext_resource type="Texture2D" uid="uid://cqqm1m7e8vmsq" path="res://Art/map.PNG" id="1_emmii"]
[ext_resource type="Script" path="res://Scenes/map/shop.gd" id="2_rfq78"]
[ext_resource type="Texture2D" uid="uid://c6xexdiscqqn5" path="res://Art/yellow ball.PNG" id="3_qn8yi"]
[ext_resource type="Texture2D" uid="uid://g82gw20bp57s" path="res://Art/play.PNG" id="4_bvjop"]
[ext_resource type="Texture2D" uid="uid://bnwl2xkp2bx2e" path="res://Art/frame_01_palhaco.png" id="4_lil8t"]
[ext_resource type="Script" path="res://Scenes/map/play.gd" id="5_yyfgh"]
[ext_resource type="FontFile" uid="uid://c17pagbfe8fdy" path="res://carnivalee-freakshow-font/CarnivaleeFreakshow-DLrm.ttf" id="6_6jrr1"]
[ext_resource type="Texture2D" uid="uid://b3pxba5dvorco" path="res://Art/Tiny shop.png" id="7_sad6w"]

[node name="map" type="Node2D"]

[node name="Art" type="Sprite2D" parent="."]
position = Vector2(577.222, 323)
scale = Vector2(0.603704, 0.603704)
texture = ExtResource("1_emmii")

[node name="Shop" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 100)
offset_left = 233.0
offset_top = 116.0
offset_right = 333.0
offset_bottom = 216.0
ignore_texture_size = true
script = ExtResource("2_rfq78")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Shop"]
position = Vector2(55, 113)
scale = Vector2(0.091491, 0.091491)
texture = ExtResource("3_qn8yi")

[node name="Sprite2D2" type="Sprite2D" parent="Shop"]
position = Vector2(47, 48)
scale = Vector2(0.0800009, 0.0800009)
texture = ExtResource("7_sad6w")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(263, 478)
scale = Vector2(0.091491, 0.091491)
texture = ExtResource("3_qn8yi")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D2"]
position = Vector2(54.6505, -524.642)
scale = Vector2(1.61851, 1.61851)
texture = ExtResource("4_lil8t")

[node name="Play" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 100)
offset_left = 877.0
offset_top = 502.0
offset_right = 1138.0
offset_bottom = 629.0
texture_normal = ExtResource("4_bvjop")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("5_yyfgh")

[node name="RichTextLabel" type="RichTextLabel" parent="Play"]
layout_mode = 0
offset_left = 75.0
offset_top = 22.0
offset_right = 222.0
offset_bottom = 107.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_6jrr1")
theme_override_font_sizes/normal_font_size = 70
text = "play"

[connection signal="mouse_entered" from="Shop" to="Shop" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Shop" to="Shop" method="_on_mouse_exited"]
[connection signal="pressed" from="Shop" to="Shop" method="_on_pressed"]
[connection signal="pressed" from="Play" to="Play" method="_on_pressed"]
